--- a/styles/post.module.css
+++ b/styles/post.module.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     row-gap: 20px;
+    overflow: hidden;
 }
 
 .menu {
